--- a/100_Employee_Injest.ipynb
+++ b/100_Employee_Injest.ipynb
@@ -194,6 +194,24 @@
     "(99, 'Zemo', 'Baron', 'Finance', 65000, 'zemo.baron@example.com'),\n",
     "(100, 'Agatha', 'Harkness', 'HR', 62000, 'agatha.harkness@example.com');*/\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "17f78240-74e3-4b72-936c-924dd9b985ef",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Hello\")"
+   ]
   }
  ],
  "metadata": {
