--- a/ETL_DLT_Pipeline/Quality_Check_&_Business_Reporting.ipynb
+++ b/ETL_DLT_Pipeline/Quality_Check_&_Business_Reporting.ipynb
@@ -93,6 +93,22 @@
     "    \n",
     "    return df_summery\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0265b1eb-f57e-490d-b9dd-db59e6c9509e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "test"
+   ]
   }
  ],
  "metadata": {
