--- a/SQL for DE/Windows Functions.ipynb
+++ b/SQL for DE/Windows Functions.ipynb
@@ -713,6 +713,107 @@
     "\n",
     "CASE = chooses which one makes sense at that moment."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "70ecb531-7d73-46a5-8352-5a0b19190480",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT emp_id,\n",
+    "       aadhaar,\n",
+    "       CASE\n",
+    "         -- if backward-fill is still null (happens at the very end),\n",
+    "         -- then fall back to the last non-null value seen before\n",
+    "         WHEN FIRST_VALUE(aadhaar) IGNORE NULLS\n",
+    "                OVER (ORDER BY emp_id\n",
+    "                      ROWS BETWEEN CURRENT ROW AND UNBOUNDED FOLLOWING) IS NULL\n",
+    "         THEN LAST_VALUE(aadhaar) IGNORE NULLS\n",
+    "                OVER (ORDER BY emp_id\n",
+    "                      ROWS BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW)\n",
+    "\n",
+    "         -- otherwise, just use the backward-filled value\n",
+    "         ELSE FIRST_VALUE(aadhaar) IGNORE NULLS\n",
+    "                OVER (ORDER BY emp_id\n",
+    "                      ROWS BETWEEN CURRENT ROW AND UNBOUNDED FOLLOWING)\n",
+    "       END AS aadhaar_filled\n",
+    "FROM data_engineering_practice.sql.emp_ids\n",
+    "ORDER BY emp_id;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "287967dd-da27-4696-8b36-7fa35f642c0c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "🟦 Step-by-step Explanation\n",
+    "1️⃣ Backward-fill expression\n",
+    "FIRST_VALUE(aadhaar) IGNORE NULLS\n",
+    "  OVER (ORDER BY emp_id ROWS BETWEEN CURRENT ROW AND UNBOUNDED FOLLOWING)\n",
+    "\n",
+    "\n",
+    "FIRST_VALUE → normally gives the first value in the frame.\n",
+    "\n",
+    "Window frame = from current row → end of table → means “look forward in the list.”\n",
+    "\n",
+    "With IGNORE NULLS, it skips blanks and finds the next available Aadhaar.\n",
+    "\n",
+    "👉 This is our main backward fill.\n",
+    "\n",
+    "2️⃣ Fallback logic\n",
+    "\n",
+    "But if we’re at the very end of the table, and those rows are null, looking ahead won’t find anything.\n",
+    "So, we need a fallback:\n",
+    "\n",
+    "LAST_VALUE(aadhaar) IGNORE NULLS\n",
+    "  OVER (ORDER BY emp_id ROWS BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW)\n",
+    "\n",
+    "\n",
+    "This looks backwards for the most recent non-null Aadhaar.\n",
+    "\n",
+    "That way, trailing nulls at the bottom don’t stay empty.\n",
+    "\n",
+    "3️⃣ The CASE logic\n",
+    "CASE \n",
+    "  WHEN (backward-fill) IS NULL\n",
+    "  THEN (forward-fill)\n",
+    "  ELSE (backward-fill)\n",
+    "END\n",
+    "\n",
+    "\n",
+    "If backward-fill fails (end-of-table problem) → fall back to forward-fill.\n",
+    "\n",
+    "Otherwise → just use backward-fill.\n",
+    "\n",
+    "✅ So, forward-fill = “fill down,” backward-fill = “fill up.”\n",
+    "Both use the same trick:\n",
+    "\n",
+    "One main direction (dragging values).\n",
+    "\n",
+    "One fallback in the opposite direction.\n",
+    "\n",
+    "A CASE to switch between them."
+   ]
   }
  ],
  "metadata": {
@@ -725,7 +826,9 @@
    },
    "inputWidgetPreferences": null,
    "language": "sql",
-   "notebookMetadata": {},
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
    "notebookName": "Windows Functions",
    "widgets": {}
   },
