DE all Push till 9th sep

--- a/ETL_DLT_Pipeline/Quality_Check_&_Store.ipynb
+++ b/ETL_DLT_Pipeline/Quality_Check_&_Store.ipynb
@@ -86,39 +86,14 @@
     "    name =\"gold.gold_summery_dept\"\n",
     ")\n",
     "def gold_summery_dept():\n",
-    "    df = spark.readStream.table(\"Live.silver.silver_employees\")\n",
+    "    df = spark.read.table(\"live.silver.silver_employees\")\n",
     "    df_summery = df.groupBy(\"department\").agg(\n",
     "        count(\"*\").alias(\"employee_count_per_dept\"),\n",
     "        round(avg(\"salary\")).alias(\"avg_salary\")\n",
     "    )\n",
+    "    final_df = df.join(df_summery, on=\"department\", how=\"left\")\n",
     "    \n",
-    "    return df_summery"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "3ed4a18b-143a-47fd-b4ec-7d24d350c450",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "@dlt.table(\n",
-    "    name=\"gold.gold_employees\"\n",
-    ")\n",
-    "def gold_employees():\n",
-    "    employee_df = spark.readStream.table(\"Live.silver.silver_employees\")\n",
-    "    dept_summary_df = dlt.read(\"gold.gold_summery_dept\")\n",
-    "    final_df = employee_df.join(dept_summary_df, on=\"department\", how=\"left\")\n",
-    "\n",
-    "    return final_df\n"
+    "    return final_df"
    ]
   }
  ],
@@ -135,7 +110,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Quality_Check_&_Business_Reporting",
+   "notebookName": "Quality_Check_&_Store",
    "widgets": {}
   },
   "language_info": {
